[package]

name = "dumbpointers"
description = "Pointless exercises with Rust (de)allocation"
version = "0.0.1"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"

[dependencies]
tinyrick = { version = "0.0.9", optional = true }
tinyrick_extras = { version = "0.0.3", optional = true }

[features]
letmeout = ["tinyrick", "tinyrick_extras"]

[lib]
name = "dumbpointers"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
